--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>HARUS SEMANGAT OJT NYAAA !!!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ea tempora harum eius eveniet non numquam natus recusandae dolor consectetur, alias esse asperiores perferendis maiores! Harum odio sapiente illum dolor!</p>
 </body>
 </html>
